kubernetes/dev/deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: carabia-deployment
#   namespace: dev
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: carabia
#   template:
#     metadata:
#       labels:
#         app: carabia
#     spec:
#       containers:
#       - name: carabia-container
#         image: 836479504031.dkr.ecr.eu-west-1.amazonaws.com/carabia-ecr:48d41891f5018659e9f564803bb493e525041880
#         imagePullPolicy: Always
#         ports:
#         - containerPort: 80
#         envFrom:
#         - configMapRef:
#             name: carabia-config
#         - secretRef:
#             name: carabia-secret
#              env:
#         - name: DATA_PROTECTION_KEYS_PATH
#           value: /mnt/dataprotection-keys
#         - name: AUTH_COOKIE_DOMAIN
#           value: .carabiacars.com
#         volumeMounts:
#         - name: dataprotection-keys
#           mountPath: /mnt/dataprotection-keys

#       volumes:
#       - name: dataprotection-keys
#         persistentVolumeClaim:
#           claimName: carabia-dataprotection-pvc
# ata ager maser
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: carabia-deployment
#   namespace: dev
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: carabia
#   template:
#     metadata:
#       labels:
#         app: carabia
#     spec:
#       containers:
#         - name: carabia-container
#           image: 836479504031.dkr.ecr.eu-west-1.amazonaws.com/carabia-ecr:48d41891f5018659e9f564803bb493e525041880
#           imagePullPolicy: Always
#           ports:
#             - containerPort: 80
#           envFrom:
#             - configMapRef:
#                 name: carabia-config
#             - secretRef:
#                 name: carabia-secret
#           env:
#             - name: DATA_PROTECTION_KEYS_PATH
#               value: "/mnt/dataprotection-keys"
#             - name: AUTH_COOKIE_DOMAIN
#               value: ".carabiacars.com"
#           volumeMounts:
#             - name: dataprotection-keys
#               mountPath: /mnt/dataprotection-keys
#       volumes:
#         - name: dataprotection-keys
#           persistentVolumeClaim:
#             claimName: carabia-dataprotection-pvc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carabia-deployment
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: carabia

  template:
    metadata:
      labels:
        app: carabia

    spec:
      serviceAccountName: carabia-sa

      containers:
        - name: carabia-container
          image: 836479504031.dkr.ecr.eu-west-1.amazonaws.com/carabia-ecr:48d41891f5018659e9f564803bb493e525041880
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: dataprotection-keys
              mountPath: /mnt/dataprotection-keys

      volumes:
        - name: dataprotection-keys
          persistentVolumeClaim:
            claimName: carabia-dataprotection-pvc

# apiVersion: apps/v1
# kind: Deployment

# metadata:
#   name: carabia-deployment
#   namespace: dev

# spec:
#   replicas: 2

#   selector:
#     matchLabels:
#       app: carabia

#   template:
#     metadata:
#       labels:
#         app: carabia

#     spec:
#       serviceAccountName: carabia-sa

#       containers:
#         - name: carabia-container
#           image: 836479504031.dkr.ecr.eu-west-1.amazonaws.com/carabia-ecr:48d41891f5018659e9f564803bb493e525041880

#           imagePullPolicy: Always

#           ports:
#             - containerPort: 80

#           envFrom:
#             - configMapRef:
#                 name: carabia-config

#             - secretRef:
#                 name: carabia-secret

#           env:
#             - name: DATA_PROTECTION_KEYS_PATH
#               value: "/mnt/dataprotection-keys"

#             - name: AUTH_COOKIE_DOMAIN
#               value: ".carabiacars.com"

#           volumeMounts:
#             - name: dataprotection-keys
#               mountPath: /mnt/dataprotection-keys

            

#       volumes:
#         - name: dataprotection-keys
#           persistentVolumeClaim:
#             claimName: carabia-dataprotection-pvc
