kubernetes/dev/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: carabia-ingress
#   namespace: dev
#   annotations:
#     kubernetes.io/ingress.class: alb
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

# spec:
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: carabia-service
#             port:
#               number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carabia-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb

    # ✅ ALB Config
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # ✅ SSL CERT (🔥 MUST REPLACE)
    alb.ingress.kubernetes.io/certificate-arn: <YOUR-ACM-ARN>

    # ✅ Enable HTTP + HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ✅ Force HTTPS redirect
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  rules:
  - host: dev.carabiacars.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carabia-service
            port:
              number: 80
